Popup bug gefixt + jquery geadded

--- a/own.css
+++ b/own.css
@@ -33,27 +33,13 @@ html, body, #map {
     margin-bottom: 15px;
     margin-left: 5px;
   }
-  .box-invisible {
+  .box1 {
     background-color: white;
     border-radius: 6px;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
     color: #4a4a4a;
     padding: 1.25rem;
     display: none;
-    height: 50px;
-    width: auto;
-    z-index: 20001;
-    position: absolute;
-    text-align: center;
-    margin-right: auto;
-  }
-  .box-visible {
-    background-color: white;
-    border-radius: 6px;
-    box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
-    color: #4a4a4a;
-    display: block;
-    padding: 1.25rem;
     height: 50px;
     width: auto;
     z-index: 20001;
