--- a/own.css
+++ b/own.css
@@ -15,15 +15,16 @@ html, body, #map {
               left: 1em;
               width: 570;
               z-index: 20000;
-              background-color: rgba(0, 0, 0, 0.5);
+              background-color: rgba(0, 0, 0, 0.15);
               margin: 0;
               color: white;
               padding: 0 0.5em 0.5em 0.5em;
+              
   }
 
   .custom-zoom{
-    top: .5em;
-    left: .5em;
+    top: 87%;
+    left: 97%;
   }
   .custom-zoom button{
     background-color: rgba(40, 40, 40, .7);
@@ -34,7 +35,7 @@ html, body, #map {
     margin-left: 5px;
   }
   .box1 {
-    background-color: white;
+    background-color: rgb(218, 218, 218);
     border-radius: 6px;
     box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
     color: #4a4a4a;
@@ -45,6 +46,40 @@ html, body, #map {
     z-index: 20001;
     position: absolute;
     text-align: center;
-    right: 1%;
-    top: 1%;
+    left: 0%;
+    top: 0%;
+    border-color: black;
+    border-style: solid;
+    border-width: 2px;
   }
+  .button{
+    background: rgb(0, 196, 167);
+    border: transparent;
+    background-size: 200%;
+    transition: .4s;
+    color: white;
+  }
+  .button:hover{
+    background: rgba(0, 0, 0, 0.4);
+    border: transparent;
+    height: 40px;
+    color: white;
+  }
+  .button:focus{
+    /*background: rgba(7, 11, 230, 0.6);*/
+    border: transparent;
+    color: white;
+
+  }
+
+  .input{
+    border: rgb(0, 196, 167);
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 3px;
+    margin-right: 15px;
+    width: max-content;
+    height: 30px;
+    background: rgba(10, 10, 10, 0.3);
+  }
+  
