--- a/bulma.css
+++ b/bulma.css
@@ -10830,3 +10830,7 @@
     padding: 3rem 1.5rem 6rem;
   }
   /*# sourceMappingURL=bulma.css.map */
+
+  .custom-zoom {
+    transform: scale(2.5);
+  }
